# mod0

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src-tauri/: .gitignore  Cargo.toml  mod0.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260212194643_init_schema.sql  20260213042036_init.sql
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  ai.rs  config.rs  filesystem.rs  fs.rs  lsp.rs  mcp.rs  mod.rs
src-tauri/src/commands/kernel/: fs.rs  terminal.rs
src-tauri/src/commands/services/: bridge.rs  mod.rs  orchestration.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/models/: agent.rs  bridge.rs  communication.rs  core.rs  files.rs  history.rs  kernel.rs  mod.rs  project.rs  session.rs  workspace.rs
src-tauri/src/database/models/collaboration/: artifact.rs  mod.rs  session.rs  task.rs
src-tauri/src/database/models/intelligence/: chat_history.rs  mod.rs  skill.rs  thought_node.rs
src-tauri/src/database/models/kernel/: editor_state.rs  extension.rs  file_index.rs  file_metadata.rs  mod.rs  project.rs  project_extension.rs  terminal_history.rs
src-tauri/src/database/repository/: agent.rs  artifact.rs  editor.rs  extension.rs  file_index.rs  files.rs  history.rs  indexer.rs  mod.rs  project.rs  projects.rs  session.rs  skill.rs  skills.rs  task.rs  thought.rs  workspace.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/dispatchers/: defs.rs  filesystem.rs  mod.rs  terminal.rs
src-tauri/src/domain/kernel/: filesystem.rs  mod.rs  terminal.rs
src-tauri/src/domain/orchestration/: discovery.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/core_features/: mod.rs
src-tauri/src/features/extensible_features/: mod.rs
src-tauri/src/infrastructure/: events.rs  mod.rs
src-tauri/src/infrastructure/dispatchers/: mod.rs
src-tauri/src/infrastructure/extension_host/: manifest.rs  mod.rs  runtime_proxy.rs
src-tauri/src/infrastructure/extensions/: mod.rs  runtime_proxy.rs
src-tauri/src/infrastructure/filesystem/: io.rs  mod.rs  search.rs  watcher.rs  worker.rs
src-tauri/src/infrastructure/runtime/: mod.rs
src-tauri/src/infrastructure/shared_behaviors/: mod.rs
src-tauri/src/infrastructure/terminal/: mod.rs  pty.rs
src-tauri/src/infrastructure/transport/: http.rs  tcp.rs
src-tauri/src/infrastructure/utils/: mod.rs
src-tauri/src/kernel/filesystem/: mod.rs  operations.rs  search.rs
src-tauri/src/kernel/fs/: mod.rs  nodes.rs  operations.rs  scanner.rs  search.rs  watcher.rs  worker.rs
src-tauri/src/kernel/terminal/: history.rs  manager.rs  mod.rs  pty.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/persistence/database/: mod.rs
src-tauri/src/services/: external.rs  mod.rs
src-tauri/src/services/bridge/: defs.rs  mod.rs
src-tauri/src/services/bridge/codec/: mod.rs  (+3 more)
src-tauri/src/services/filesystem/: nodes.rs  scanner.rs  search.rs
(+231 files in other folders)
