[package]
name = "mod0"
version = "0.1.0"
description = "Autónomo | Autonomic • Agnóstico | Agnostic • Agéntico | Agentic • 2026 • <strong>Mod0 por | by Modus Zero"
authors = ["Luis Alberto Hernández Roselló"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mod0_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2.4.1"
futures = "0.3.31"
tauri-plugin-dialog = "2"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
ignore = "0.4"
notify = "8.2.0"
portable-pty = "0.9.0"
dashmap = "6.1.0"
regex = "1.12.3"
lazy_static = "1.5.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
reqwest = { version = "0.13.2", features = ["json"] }
toml = "1.0.2"
async-trait = "0.1.89"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

